2015-05-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/wxterminal/wxt_gui.cpp: Insert missing include of
	<sys/select.h>.
	(wxt_waitforinput): Add note about missing check for HAVE_SELECT.

2015-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot):  Turning on "hidden3d" caused an off by
	one error in assigning color to contours levels. (introduced in 4.6.5)
	Bug #1603

	* configure.in src/version.c:  Bump patchlevel to 4.6.7

2015-04-27  Christoph Bersch <usenet@bersch.net>

	* src/stats.c:  The stats code was confusing the x and y dimensions of
	matrix data.  E.g. it would report a 5X7 matrix as being 7X5, and
	mis-calculate the indices of the min/max values.
	Bug #1501

2015-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term.c (test_term): print gnuplot version in "test" command.

2015-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c:  Special case code for axis tickmarks in polar plots was 
	incorrectly being applied to all axes, not just the polar axis.
	Bug #1569

2015-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL: bump to 4.6.7, which may or may not ever get a formal
	release.

2015-02-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (apply_pm3dcolor): Variable color specifier "palette cb"
	failed to handle log-scaling of the color axis.
	Bug #1560

2015-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_determine_matrix_info):  Apply numeric locale
	when reading ascii matrix data.
	Bug #1536

2014-11-22  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/mouse.c:  Pause mouse was broken on Windows as a side-effect
	of the change on 2014-08-01.  The windows terminal expects the pause
	mouse to be reset in the gnuplot core whereas other terminal drivers
	(qt/wxt/x11) do that in the driver code.
	Bugfix.

2014-10-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (copy_or_invent_formatstring): Backport fix for axis